# ComfyUI-DirGir

./: .gitignore  README.md  __init__.py  dir_loop.py  dir_picker.py  image_nabber.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
web/js/: gir.js
