[project]
name = "comfyui-dirgir"
description = "A collection of ComfyUI directory automation utility nodes. Directory Get It Right adds a GUI directory browser, and smart directory loop/iteration node that supports regex and file extension filtering."
version = "1.0.0"
license = "LICENSE"
dependencies = ["aiohttp", "tk"]

[project.urls]
Repository = "https://github.com/AshMartian/ComfyUI-DirGir"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ashmartian"
DisplayName = "ComfyUI-DirGir"
Icon = ""
