[project]
name = "comfyui-dirgir"
description = "A collection of ComfyUI directory automation utility nodes. Directory Get-It-Right adds a GUI directory browser, and a smart directory loop/iteration node that supports regex + file extension filtering + sorting methods."
version = "1.2.5"
license = "LICENSE"
dependencies = ["aiohttp", "tk"]

[project.urls]
Repository = "https://github.com/AshMartian/ComfyUI-DirGir"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ashmartian"
DisplayName = "ComfyUI-DirGir"
Icon = "https://github.com/AshMartian/ComfyUI-DirGir/blob/main/docs/GIR_happy.jpg?raw=true"
